2012-10-24  Brady Eidson  <beidson@apple.com>

        Add a strategy for loader customization.
        https://bugs.webkit.org/show_bug.cgi?id=100278

        Reviewed by Alexey Proskuryakov.

        * WebCoreSupport/WebPlatformStrategies.h:
        (WebPlatformStrategies):
        * WebCoreSupport/WebPlatformStrategies.mm:
        (WebPlatformStrategies::createLoaderStrategy):

2012-10-24  Timothy Hatcher  <timothy@apple.com>

        Make the Inspector WKView/WebView become the first responder when bringToFront is called.

        https://bugs.webkit.org/show_bug.cgi?id=100209

        Reviewed by Joseph Pecoraro.

        * WebCoreSupport/WebInspectorClient.mm:
        (WebInspectorFrontendClient::bringToFront): Make the Inspector WebView become the first responder.

2012-10-23  Alexey Proskuryakov  <ap@apple.com>

        Add a strategy for shared workers
        https://bugs.webkit.org/show_bug.cgi?id=100165

        Reviewed by Brady Eidson.

        * WebCoreSupport/WebPlatformStrategies.h:
        * WebCoreSupport/WebPlatformStrategies.mm:
        (WebPlatformStrategies::createPasteboardStrategy):
        (WebPlatformStrategies::createSharedWorkerStrategy):
        (WebPlatformStrategies::createVisitedLinkStrategy):

2012-10-24  Eric Carlson  <eric.carlson@apple.com>

        Allow ports to override text track rendering style
        https://bugs.webkit.org/show_bug.cgi?id=97800
        <rdar://problem/12044964>

        Reviewed by Maciej Stachowiak.

        * WebCoreSupport/WebSystemInterface.mm:
        (InitWebCoreSystemInterface): Initialize new WKSI function pointers.

2012-10-23  Dan Bernstein  <mitz@apple.com>

        WebKit/mac part of <rdar://problem/2966974> [mac] Kerning and ligatures are not enabled by default
        https://bugs.webkit.org/show_bug.cgi?id=100188

        Reviewed by Sam Weinig.

        * WebView/WebView.mm:
        (+[WebView initialize]): Added a local variable to hold the standard user defaults. Added