@@ -200,8 +200,13 @@ String WebInspectorFrontendClient::hiddenPanels()
 void WebInspectorFrontendClient::bringToFront()
 {
     updateWindowTitle();
+
     [m_windowController.get() showWindow:nil];
-    [[m_windowController.get() window] makeFirstResponder:[m_windowController.get() webView]];
+
+    // Use the window from the WebView since m_windowController's window
+    // is not the same when the Inspector is docked.
+    WebView *webView = [m_windowController.get() webView];
+    [[webView window] makeFirstResponder:webView];
 }
 
 void WebInspectorFrontendClient::closeWindow()
