@@ -1,3 +1,13 @@
+2012-10-24  Timothy Hatcher  <timothy@apple.com>
+
+        Fix a crash seen during the Inspector tests on the WebKit1 bots.
+
+        Reviewed by Filip Pizlo.
+
+        * WebCoreSupport/WebInspectorClient.mm:
+        (WebInspectorFrontendClient::bringToFront): Use the window from the WebView since m_windowController's window
+        is not the same when the Inspector is docked.
+
 2012-10-24  Brady Eidson  <beidson@apple.com>
 
         Add a strategy for loader customization.
